test: add unit and integration tests